# PharmEase

./: CMakeLists.txt  main.cpp
backend/: customer.cpp  customer.h  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  medicine.cpp  medicine.h  order.cpp  order.h  stock.cpp  stock.h  supplier.cpp  supplier.h
data/: PHARMACY.db  PHARMACY.db-journal  PHARMACY.sqbpro
qml/: App.qml  DataBaseError.qml  Employee_details.qml  Login_administrator.qml  Login_employee.qml  Main_administrator.qml  Main_employee.qml  Manage_stock.qml  Place_order.qml  Sales_report.qml  Screen01.qml  Track_inventory.qml  View_orders.qml
qml/images/: README.txt
